<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/green_pharmacy_sign"
    android:focusable="false">

    //Textview which gives the user instructions on how to use the app.
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/description"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:background="#263238"
        android:text="@string/app_description"/>

    //Textview which displays the medication the user requires.
    <TextView
        android:id="@+id/scan_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:gravity="center"/>

    //Textview which displays the pharmacy the user has selected.
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selected_pharmacy"
        android:textIsSelectable="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/scan_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:gravity="center"/>

    //button which when clicked will call the activity which searches the selected pharmacies database.
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_pharmacy"
        android:id="@+id/btn_searchpharmacy"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/selected_pharmacy"
        android:layout_marginTop="20dp"
        android:background="#263238"
        android:onClick="searchStock"
        android:clickable="true"
        android:textColor="@android:color/background_light" />

    //button which when clicked will call the activity which scans the QR code
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_qrcode"
        android:onClick="scanQR"
        android:id="@+id/btn_qrcode"
        android:layout_above="@+id/btn_searchgooglemaps"
        android:background="#263238"
        android:clickable="true"
        android:textColor="@android:color/background_light" />

    //button which when clicked will call the google maps activity.
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_google_maps"
        android:id="@+id/btn_searchgooglemaps"
        android:onClick="searchMap"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_above="@+id/btn_selectsavedpharmacy"
        android:background="#263238"
        android:clickable="true"
        android:textColor="@android:color/background_light" />

    //button which when clicked will call an activity which will allow the user toi seleced a pharmacy previously used.
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_saved_pharmacy"
        android:id="@+id/btn_selectsavedpharmacy"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:onClick="searchFavourites"
        android:clickable="true"
        android:textColor="@android:color/background_light"
        android:background="#263238" />

</RelativeLayout>
